recent history image stretch issue fix

--- a/catalog/templates/core15/css/template.css
+++ b/catalog/templates/core15/css/template.css
@@ -487,7 +487,6 @@
 }
 
 #loaded7 .content-recently-visited-image-src {
-  width: 100px;
   height: 120px;
 }
 
